log
Sat 26 Aug 2023 08:26:24 PM UTC: 
 tests:  0|6
total_score: 0/70
cdca662
Sat 26 Aug 2023 09:01:26 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:35:7: error: expected ‘;’ before ‘nuevaLita’
   35 |       nuevaLita->tail = NULL;
      |       ^~~~~~~~~
Compilation failed
e5f38a3
Sat 26 Aug 2023 09:01:41 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
3f424e5
Sat 26 Aug 2023 09:02:16 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
e9e8ab1
Sat 26 Aug 2023 09:03:33 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:43:33: error: expected ‘;’ before ‘return’
   43 |       list->current = list->head
      |                                 ^
      |                                 ;
   44 |       return list->current->data;
      |       ~~~~~~                     
Compilation failed
e490c2a
Sat 26 Aug 2023 09:03:40 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
69f1e6a
Sat 26 Aug 2023 09:04:09 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
   46 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
616bdd7
Sat 26 Aug 2023 09:04:16 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
02175bd
Sat 26 Aug 2023 09:06:30 PM UTC: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:52:33: error: expected ‘;’ before ‘}’ token
   52 |       return list->current->data
      |                                 ^
      |                                 ;
   53 |   }
      |   ~                              
Compilation failed
771374d
Sat 26 Aug 2023 09:06:41 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a50eeec
